<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home">



    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/balance_dashboard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@color/white"
            app:cardBackgroundColor="@android:color/transparent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@drawable/home_rectangular_shape">

                <LinearLayout
                    android:id="@+id/month_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal"
                    android:layout_marginTop="20dp"
                    android:background="@null">

                    <TextView
                        android:id="@+id/month_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_gravity="center_vertical"
                        android:textSize="20sp"
                        android:text="September" />

                    <ImageView
                        android:layout_marginStart="5dp"
                        android:id="@+id/month_select"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:src="@drawable/home_arrow"
                        app:tint="@color/white"/>

                </LinearLayout>

                <TextView
                    android:layout_marginTop="30dp"
                    android:id="@+id/balance_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:text="@string/balance_label" />

                <TextView
                    android:id="@+id/balance_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="$0.00"
                    android:textSize="25sp"/>

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/btn_visibility_desc"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/home_visibility_ic"
                    android:layout_marginTop="15dp"/>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/incomes_n_expanses"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="15dp"
                    android:background="@null">

                    <LinearLayout
                        android:id="@+id/incomes"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="clip_vertical"
                        android:layout_marginStart="25dp"
                        android:layout_marginBottom="20dp"
                        android:orientation="horizontal"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <ImageView
                            android:id="@+id/imageView2"
                            android:layout_width="45dp"
                            android:layout_height="45dp"
                            android:background="@drawable/add_transaction_btn_shape"
                            android:backgroundTint="@color/light_green"
                            android:src="@drawable/home_income_ic" />

                        <LinearLayout
                            android:id="@+id/income_layout"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginStart="5dp"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="2"
                                android:text="@string/incomes_label"
                                android:textSize="16sp" />

                            <TextView
                                android:id="@+id/textView4"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="$0.00"
                                android:textSize="20sp" />
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/expenses"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="end"
                        android:layout_marginEnd="25dp"
                        android:layout_marginBottom="20dp"
                        android:orientation="horizontal"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <ImageView
                            android:id="@+id/imageView5"
                            android:layout_width="45dp"
                            android:layout_height="45dp"
                            android:background="@drawable/add_transaction_btn_shape"
                            android:src="@drawable/home_expense_ic" />

                        <LinearLayout
                            android:id="@+id/expanse_layout"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginStart="5dp"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="2"
                                android:text="@string/expenses_label"
                                android:textSize="16sp" />

                            <TextView
                                android:id="@+id/textView7"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="$0.00"
                                android:textSize="20sp" />
                        </LinearLayout>
                    </LinearLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>