<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Add_Transaction_Expense">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="291dp"
            android:text="@string/income_amount_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:text="$0.00"
            android:textSize="30sp"

            app:layout_constraintEnd_toEndOf="@+id/textView"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:onClick="onClick"
            android:clickable="true"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/add_transaction_rectangular_shape"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/amount">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="20dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/isPaid_ic"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="8dp"
                        android:src="@drawable/add_transaction_paid_ic" />

                    <TextView
                        android:id="@+id/isReceived_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/received_label"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                    <Switch
                        android:id="@+id/isPaid_switch"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:background="@color/white" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/mic_disc_ic"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="8dp"
                        android:src="@drawable/add_transaction_audio_ic" />


                    <EditText
                        android:id="@+id/description"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:background="@android:color/transparent"
                        android:ems="20"
                        android:gravity="center_vertical"
                        android:inputType="textLongMessage"
                        android:text="@string/description_label" />

                </LinearLayout>

                <!--for some reason, lines disappear when zoomed out (only on emulator)-->
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:background="@color/white" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/category_ic"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="8dp"
                        android:src="@drawable/add_transaction_category_ic" />


                    <TextView
                        android:id="@+id/placeholder"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:background="@android:color/transparent"
                        android:ems="15"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="Place Holder Category" />

                    <ImageView
                        android:id="@+id/next_ic"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:src="@drawable/add_transaction_arrow" />

                </LinearLayout>

                <!--for some reason, lines disappear when zoomed out (only on emulator)-->
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:background="@color/white" />

            </LinearLayout>





            <ImageButton
                android:id="@+id/confirm_btn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/add_transaction_btn_shape"
                android:backgroundTint="@color/light_green"
                android:src="@drawable/add_transaction_btn_ic"
                app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>